// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Buttons Combining buttons renders 1`] = `
<section>
  <h2
    id="combining-buttons"
  >
    Combining buttons
  </h2>
  <p>
    When using buttons next to each other, always wrap them in a
     
    <code
      className="code-tags code-tags-primary"
    >
      .button-group
    </code>
     to ensure internal spacing. Never use multiple buttons of type primary, and preferably only one secondary.
  </p>
  <p>
    In the example below, primary button is using
     
    <code
      className="code-tags code-tags-primary"
    >
      .btn-block
    </code>
    , using the whole width of its container.
  </p>
  <p>
    The tertiary button are often smaller than the other buttons. We are not recommending the example below in terms of UI - we just want to visualize the grouping.
  </p>
  <div
    className="showcase-panel"
  >
    <div
      className="button-group"
    >
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-primary btn-xl btn-block"
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Activate
      </button>
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-secondary"
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Disable
      </button>
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-tertiary btn-sm"
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Back
      </button>
      

    </div>
  </div>
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="button-group"&gt;
                

                    &lt;button class="btn btn-primary btn-xl btn-block" type="button"&gt;Activate&lt;/button&gt;
                

                    &lt;button class="btn btn-secondary" type="button"&gt;Disable&lt;/button&gt;
                

                    &lt;button class="btn btn-tertiary btn-sm" type="button"&gt;Back&lt;/button&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>
</section>
`;

exports[`Documentation: Buttons Developer documentation renders 1`] = `
<section>
  <h2
    id="developer-documentation"
  >
    Developer documentation
  </h2>
  <h3>
    Disabled state
  </h3>
  <p>
    Make buttons look inactive by adding the
     
    <code
      className="code-tags code-tags-primary"
    >
      disabled
    </code>
     boolean attribute to any
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;button&gt;
    </code>
     element. Disabling buttons are rarely recommended, so please think twice before implementing them. They should only be used in settings where an action is required before you can continue, or similar cases.
  </p>
  <p>
    In cases where 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;a&gt;
    </code>
     tags are styled as buttons (NOT RECOMMENDED), adding the disabled attribute is not sufficient, therefore you need to add the
     
    <code
      className="code-tags code-tags-secondary"
    >
      .disabled
    </code>
     class and make sure
     
    <code
      className="code-tags code-tags-secondary"
    >
      aria-disabled="true"
    </code>
     attribute is present.
  </p>
  <div
    className="showcase-panel"
  >
    <div
      className="button-group"
    >
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-primary"
        disabled={true}
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Primary
      </button>
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-secondary"
        disabled={true}
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Secondary
      </button>
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-tertiary"
        disabled={true}
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Tertiary
      </button>
      

    </div>
  </div>
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;button class="btn btn-primary" disabled type="button"&gt;Primary&lt;/button&gt;
                

                &lt;button class="btn btn-secondary" disabled type="button"&gt;Secondary&lt;/button&gt;
                

                &lt;button class="btn btn-tertiary" disabled type="button"&gt;Tertiary&lt;/button&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>
  <h3>
    Loading state
  </h3>
  <p>
    Use the loading state to show users their action is processing by adding the 
    <code
      className="code-tags code-tags-primary"
    >
      .loading
    </code>
     class to the
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;button&gt;
    </code>
     element.
  </p>
  <div
    className="showcase-panel"
  >
    <div
      className="button-group"
    >
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-primary loading"
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Primary
      </button>
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-secondary loading"
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Secondary
      </button>
      

      <button
        active={null}
        aria-disabled={null}
        aria-label={null}
        aria-pressed={null}
        className="btn btn-tertiary loading"
        role={null}
        tabIndex={null}
        title={null}
        type="button"
      >
        Tertiary
      </button>
      

    </div>
  </div>
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;button class="btn btn-primary loading" type="button"&gt;Primary&lt;/button&gt;
                

                &lt;button class="btn btn-secondary loading" type="button"&gt;Secondary&lt;/button&gt;
                

                &lt;button class="btn btn-tertiary loading" type="button"&gt;Tertiary&lt;/button&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>
</section>
`;
